--- a/core/config.json
+++ b/core/config.json
@@ -3,30 +3,40 @@
         "proxy": {
             "placeId": 0,
             "requestTime": 60,
-            "requestLimit": 128,
-            "cacheMaxSize": 100,
-            "cacheTTL": 150
+            "requestLimit": 128
         },
+        
+        "caching": {
+            "maxSize": 100,
+            "ttl": 150
+        },
+
         "blocking": {
             "ips": [
                 "192.168.1.1"
             ],
+
             "ids": [
                 0
             ],
-            "blockTime": 43200,
-            "subdomains": [
+
+            "apis": [
                 "games",
                 "catalog"
-            ]
+            ],
+
+            "blockTime": 43200
         },
+        
         "logging": {
             "webhook": ""
         }
     },
+    
     "relay_config": {
         "use_relay": false
     },
+
     "analytics": {
         "requests": [
             0,
